# icecast-libshout

./: .gitmodules  CMakeLists.txt  ShoutConfig.cmake.in
.github/workflows/: build.yml
cmake/: FindVorbis.cmake
include/: os.h
include/shout/: shout.h.in
src/: connection.c  format_webm.c  proto_http.c  proto_roaraudio.c
